lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:5: error: not found: value p
		if(p.x(i) == p.x(i+1))
                   ^Lander:6: error: not found: value p
			return Segment(p.x(i),p.x(i+1))
                                       ^Lander:3: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
	for(i <- 0 to 20)
              ^