lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = 
{	
	for(i <- 0 to 20)
	{
		if(p.x(i) == p.x(i+1))
			return Segment(p.x(i),p.x(i+1))
	}
}
